# bitwarden-menu

./: .gitignore  LICENSE  Makefile  README.md  bwm  bwm.1  bwm.1.md  config.ini.example  flake.nix  ops  pyproject.toml  requirements.txt  root  setup.py  test_bw_serve.sh  version
.github/workflows/: main.yml  tests.yml
bwm/: __init__.py  __main__.py  bwcli.py  bwedit.py  bwm.py  bwserve.py  bwtype.py  bwview.py  menu.py  tokens_pynput.py  tokens_wtype.py  tokens_xdotool.py  tokens_ydotool.py  totp.py
docs/: configure.md  install.md  usage.md
tests/: __init__.py  bwm-config.ini  conftest.py  test_bwcli.py  test_bwedit.py  test_bwtype.py  test_bwview.py  test_config.py  test_menu.py  test_server.py  test_totp.py  tests.py
