[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bitwarden-menu"
dynamic = ["version"]
description = "Dmenu/Rofi frontend for Bitwarden CLI tool"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Scott Hansen", email = "tech@firecat53.net" },
]
keywords = [
    "bitwarden",
    "bitwarden-menu",
    "bwm",
    "dmenu",
    "rofi",
    "wofi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "pynput",
    "xdg-base-dirs",
]

[project.scripts]
bwm = "bwm.__main__:main"

[project.urls]
Homepage = "https://github.com/firecat53/bitwarden-menu"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "bwm/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["/bwm"]

[tool.hatch.build.targets.wheel.shared-data]
LICENSE = "share/doc/bitwarden-menu/LICENSE"
"README.md" = "share/doc/bitwarden-menu/README.md"
"config.ini.example" = "share/doc/bitwarden-menu/config.ini.example"
docs = "share/doc/bitwarden-menu/docs"
"bwm.1" = "share/man/man1/bwm.1"

[tool.hatch.build.targets.sdist]
include = [
    "/bwm",
]
